# libRetroRunner

./: .gitignore  README.md  TODO.md  build.gradle  gradle.properties  retroarch_vulkan_render_loop.c  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
libDroidVirualPad/: build.gradle
libFlycast/: build.gradle
libPPSSPP/: ChangeList.md  build.gradle
libRetroRunner/: build.gradle
libRetroRunner/src/main/cpp/: CMakeLists.txt  app.cpp  app.h  audio_context.cpp  command.hpp  core.cpp  core.h  environment.cpp  environment.h  inifile.hpp  input_context.h  libretro_types.h  readme.md  rr_jni.cpp  rr_log.h  rr_types.h  time_throne.hpp  video_context.cpp  video_context.h
libRetroRunner/src/main/cpp/audio/: linearresampler.cpp  oboe_audio_context.h  resampler.h  sincresampler.cpp
libRetroRunner/src/main/cpp/cheats/: cheat_manager.h  cheat_types.h
libRetroRunner/src/main/cpp/input/: software_input.cpp  software_input.h
libRetroRunner/src/main/cpp/libretro-common/features/: features_cpu.c
libRetroRunner/src/main/cpp/libretro-common/hash/: lrc_hash.c
libRetroRunner/src/main/cpp/libretro-common/include/: libretro.h  libretro_dspfilter.h  libretro_vulkan.h  libretro_vulkan_zhCN.h  libretro_zhCN.h  lrc_hash.h  retro_miscellaneous.h
libRetroRunner/src/main/cpp/libretro-common/include/compat/: zlib.h
libRetroRunner/src/main/cpp/libretro-common/include/compat/zlib/: zlib.h
libRetroRunner/src/main/cpp/libretro-common/include/queues/: task_queue.h
libRetroRunner/src/main/cpp/libretro-common/include/vfs/: vfs.h
libRetroRunner/src/main/cpp/libretro-common/queues/: task_queue.c
libRetroRunner/src/main/cpp/libretro-common/samples/streams/rzip/: rzip.c
libRetroRunner/src/main/cpp/libretro-common/streams/: rzip_stream.c
libRetroRunner/src/main/cpp/oboe/apps/OboeTester/app/src/main/cpp/: OboeStreamCallbackProxy.cpp  OboeStreamCallbackProxy.h
libRetroRunner/src/main/cpp/oboe/apps/OboeTester/app/src/main/cpp/synth/: BiquadFilter.h
libRetroRunner/src/main/cpp/oboe/apps/OboeTester/app/src/main/java/com/mobileer/oboetester/: DeviceReportActivity.java  OboeAudioStream.java  TestDataPathsActivity.java
libRetroRunner/src/main/cpp/oboe/apps/OboeTester/docs/: Usage.md
libRetroRunner/src/main/cpp/oboe/docs/: FAQ.md
libRetroRunner/src/main/cpp/oboe/include/oboe/: AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  Definitions.h
libRetroRunner/src/main/cpp/oboe/samples/LiveEffect/: README.md
libRetroRunner/src/main/cpp/oboe/samples/RhythmGame/src/main/cpp/audio/: NDKExtractor.cpp
libRetroRunner/src/main/cpp/oboe/samples/drumthumper/src/main/kotlin/com/plausibleaudio/drumthumper/: TriggerPad.kt
libRetroRunner/src/main/cpp/oboe/samples/hello-oboe/src/main/cpp/: SoundGenerator.cpp  jni_bridge.cpp
libRetroRunner/src/main/cpp/oboe/src/aaudio/: AudioStreamAAudio.cpp
libRetroRunner/src/main/cpp/oboe/src/common/: DataConversionFlowGraph.cpp  FilterAudioStream.cpp  Utilities.cpp
libRetroRunner/src/main/cpp/oboe/tests/: testStreamClosedMethods.cpp  testStreamStates.cpp
libRetroRunner/src/main/cpp/retro_runner/: android_jni.bak  android_jni.cpp
libRetroRunner/src/main/cpp/retro_runner/app/: ap.bak.h  app.bak.cpp  app_context.cpp  app_context.h  environment.cpp  environment.h  fps_time_throne.hpp  paths.cpp  paths.h  readme.md  setting.cpp  setting.h  speed_limiter.hpp
libRetroRunner/src/main/cpp/retro_runner/audio/: audio_context.cpp  audio_context.h  empty_audio_context.cpp  empty_audio_context.h  linearresampler.h  oboe_audio_context.cpp  sincresampler.h
libRetroRunner/src/main/cpp/retro_runner/audio/oboe/: oboe_audio_context.cpp  oboe_audio_context.h
libRetroRunner/src/main/cpp/retro_runner/audio/resampler/: linear_resampler.cpp  linear_resampler.h  resampler.h  sinc_resampler.cpp  sinc_resampler.h
libRetroRunner/src/main/cpp/retro_runner/cheats/: cheat_manager.cpp  cheat_manager.h  cheat_types.h  retro_cheat_file.cpp  retro_cht_file.cpp  retro_cht_file.h
libRetroRunner/src/main/cpp/retro_runner/core/: core.cpp  core.h
libRetroRunner/src/main/cpp/retro_runner/input/: empty_input.cpp  empty_input.h  input_context.cpp  input_context.h  software_input.cpp  software_input.h
libRetroRunner/src/main/cpp/retro_runner/runtime_contexts/: core_context.cpp  core_context.h  core_runtime.cpp  core_runtime.h  game_context.cpp  game_context.h  game_runtime.cpp  game_runtime.h
libRetroRunner/src/main/cpp/retro_runner/types/: app_command.hpp  app_state.h  error.h  frontend_notify.hpp  log.h  macros.h  object_ref.hpp  retro_types.h  semaphore.hpp  semaphore_rr.cpp  semaphore_rr.h  variable.h
libRetroRunner/src/main/cpp/retro_runner/utils/: jnistring.cpp  threadsafe_queue.hpp  utils.cpp  utils.h
libRetroRunner/src/main/cpp/retro_runner/vfs/: vfs_context.cpp  vfs_context.h
libRetroRunner/src/main/cpp/retro_runner/video/: frame_buffer_object.cpp  frame_buffer_object.h  shader_pass.cpp  video_context.cpp  video_context.h
libRetroRunner/src/main/cpp/retro_runner/video/opengles/: frame_buffer_object.cpp  frame_buffer_object.h  shader_pass.cpp  shader_pass.h  shaders.h  texture.cpp  texture.h  video_context_gles.cpp  video_context_gles.h
libRetroRunner/src/main/cpp/retro_runner/video/vulkan/: rr_draws.cpp  rr_draws.h  rr_vulkan.cpp  rr_vulkan.h  rr_vulkan_instance.cpp  rr_vulkan_instance.h  rr_vulkan_pipeline.cpp  rr_vulkan_pipeline.h  rr_vulkan_swapchain.cpp  rr_vulkan_swapchain.h  rr_vulkan_types.h  shader_code_frag.h  shader_code_vert.h  video_context_hw_vulkan.cpp  video_context_hw_vulkan.h  video_context_vulkan.cpp  video_context_vulkan.cpp.bak  video_context_vulkan.h  vk_read_write_buffer.cpp  vk_read_write_buffer.h  vk_sampling_texture.cpp  vk_sampling_texture.h  vulkan_api_wrapper.cpp  vulkan_context.cpp  vulkan_context.h  vulkan_wrapper.cpp  vulkan_wrapper.h
libRetroRunner/src/main/cpp/utils/: jnistring.h  pref_counter.h  threadsafe_queue.hpp  utils.cpp  utils.h
libRetroRunner/src/main/cpp/video/: shader_pass.cpp  shader_pass.h  shaders.h  texture.cpp  texture.h  video_gl.cpp  video_gl.h
(+58 files in other folders)
